--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -78,13 +78,8 @@ jobs:
       - name: Build
         if: github.event_name == 'pull_request'
         run: |
-          srun ${SRUN_COMMON} bash -e -s <<'EOF'
-            bash .github/workflows/scripts/production_build.sh
-            source /venv/bin/activate
-            uv pip install --upgrade pip setuptools wheel
-            uv pip install omniverse-kit --index-url https://pypi.nvidia.com/
-            uv pip install ".[usd]"
-          EOF
+          srun ${SRUN_COMMON} \
+               bash .github/workflows/scripts/production_build.sh
 
       - name: Run benchmarks
         if: github.event_name == 'pull_request'
