--- a/pyproject.toml
+++ b/pyproject.toml
@@ -142,6 +142,27 @@ force-exclude = '''
 [tool.ruff]
 line-length = 120
 
+[tool.ruff.lint]
+# Ignore the specific errors currently present in the codebase
+ignore = [
+    "F405", # undefined-local-with-import-star-usage
+    "F401", # unused-import
+    "F841", # unused-variable
+    "E741", # ambiguous-variable-name
+    "E402", # module-import-not-at-top-of-file
+    "F403", # undefined-local-with-import-star
+    "F541", # f-string-missing-placeholders
+    "F821", # undefined-name
+    "E722", # bare-except
+    "E401", # multiple-imports-on-one-line
+    "E712", # true-false-comparison
+    "E713", # not-in-test
+    "F811", # redefined-while-unused
+    "E711", # none-comparison
+    "E714", # not-is-test
+    "F523", # string-dot-format-extra-positional-arguments
+]
+
 [tool.pytest.ini_options]
 addopts = [
     "--color=yes",
