refactor parsing logic & clean up codes for better readability and performance, according to the review

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -115,7 +115,7 @@ render = [
 usd = [
     # Used for parsing `.usd` mesh files
     "usd-core<25.11",
-    # import stubs
+    # import stubs to static code analysis
     "types-usd==24.5.2",
 ]
 
