--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -45,7 +45,8 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
-      - name: Start container
+
+      - name: Spawn Slurm job
         if: github.event_name == 'pull_request'
         run: |
           SLURM_JOB_NAME="$(uuidgen)_$(date +%Y%m%d_%H%M%S)"
@@ -74,14 +75,10 @@ jobs:
 
           echo "SLURM_JOB_NAME=${SLURM_JOB_NAME}" >> $GITHUB_ENV
           echo "SRUN_COMMON=${SRUN_COMMON}" >> "$GITHUB_ENV"
-
-      - name: Build
+      - name: Initialize Python virtual env
         if: github.event_name == 'pull_request'
-        run: |
-          srun ${SRUN_COMMON} \
-               bash .github/workflows/scripts/production_build.sh
-
-      - name: Run benchmarks
+        run: srun ${SRUN_COMMON} bash .github/workflows/scripts/production_build.sh
+      - name: Run unit tests
         if: github.event_name == 'pull_request'
         run: |
           srun ${SRUN_COMMON} bash -e -s <<'EOF'
@@ -97,8 +94,7 @@ jobs:
 
             # tmate -S /tmp/tmate.sock wait tmate-exit
           EOF
-
-      - name: Kill srun job systematically
+      - name: Kill Slurm job
         if: always()
         run: |
           if [ -n "${SLURM_JOB_NAME}" ] ; then
@@ -127,7 +123,8 @@ jobs:
           # Checkout full history is required to shallow cloning while mark HEAD as "grafted". This breaks remote
           # tracking thereby making it impossible to detect whether a commit is contained in upstream main.
           fetch-depth: 0
-      - name: Start container
+
+      - name: Spawn Slurm job
         run: |
           SLURM_JOB_NAME="$(uuidgen)_$(date +%Y%m%d_%H%M%S)"
           CONTAINER_NAME="${SLURM_JOB_NAME}"
@@ -158,12 +155,8 @@ jobs:
 
           echo "SLURM_JOB_NAME=${SLURM_JOB_NAME}" >> $GITHUB_ENV
           echo "SRUN_COMMON=${SRUN_COMMON}" >> "$GITHUB_ENV"
-
-      - name: Build
-        run: |
-          srun ${SRUN_COMMON} \
-               bash .github/workflows/scripts/production_build.sh
-
+      - name: Initialize Python virtual env
+        run: srun ${SRUN_COMMON} bash .github/workflows/scripts/production_build.sh
       - name: Run benchmarks
         run: |
           srun ${SRUN_COMMON} bash -e -s <<'EOF'
@@ -172,13 +165,13 @@ jobs:
                    --print -x -m "benchmarks" ./tests
             cat speed_test*.txt > "/mnt/data/artifacts/speed_test_${SLURM_JOB_NAME}.txt"
           EOF
-
-      - name: Kill srun job systematically
+      - name: Kill Slurm job
         if: always()
         run: |
           if [ -n "${SLURM_JOB_NAME}" ] ; then
             scancel --user=${USER} --name="${SLURM_JOB_NAME}"
           fi
+
       - name: Display benchmark stats
         run: |
           cat "/mnt/data/artifacts/speed_test_${SLURM_JOB_NAME}.txt"
