Revert "F841 ( Unused variables)."
This reverts commit 9ba5a0dfd411642e5adf29ff9b40c8a76a93ec23.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -147,6 +147,7 @@ line-length = 120
 ignore = [
     "F405", # undefined-local-with-import-star-usage
     "F401", # unused-import
+    "F841", # unused-variable
     "E741", # ambiguous-variable-name
     "E402", # module-import-not-at-top-of-file
     "F403", # undefined-local-with-import-star
