[Vibe Guardian] ⏰ 自动保存 @ 01-14 22:52

--- a/.gitignore
+++ b/.gitignore
@@ -155,3 +155,4 @@ examples/drone/CODE_CHANGES_DETAILED.md
 examples/drone/MPS_ACCELERATION_GUIDE.md
 examples/drone/QUICK_START.md
 examples/drone/docs
+examples/drone/docs/README_UPDATES.md
