--- a/.github/workflows/generic.yml
+++ b/.github/workflows/generic.yml
@@ -118,8 +118,9 @@ jobs:
       - name: Install Mesa 25 OpenGL driver (Linux)
         if: startsWith(matrix.OS, 'ubuntu-')
         run: |
-          sudo add-apt-repository -y ppa:kisak/kisak-mesa
-          sudo apt-get update
+          for retry in {1..5}; do
+            sudo add-apt-repository -y ppa:kisak/kisak-mesa && break || sleep 5;
+          done
           sudo apt install -y \
               libglu1-mesa \
               libegl-mesa0 \
